frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-front
  namespace: team6
  labels:
    app: chatbot-front
spec:
  replicas: 3 # Le nombre de répliques souhaité
  selector:
    matchLabels:
      app: chatbot-front
  template:
    metadata:
      labels:
        app: chatbot-front
    spec:
      containers:
      - name: chatbot-front
        image: 448878779811.dkr.ecr.eu-west-3.amazonaws.com/acospain-ecr:team6-front # Nom de l'image Docker à utiliser
        ports:
        - containerPort: 3000 # Port sur lequel le frontend écoute
          protocol: TCP
