redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: team6
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: 448878779811.dkr.ecr.eu-west-3.amazonaws.com/acospain-ecr:team6-redis
        ports:
        - containerPort: 6379
          protocol: TCP
