api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-api
  namespace: team6
spec:
  type: NodePort # Le type de service, ajustez selon vos besoins
  ports:
  - name: http
    protocol: TCP
    port: 80 # Port que le service expose
    targetPort: 5000 # Port vers lequel le trafic est redirigé
  selector:
    app: chatbot-api
