orchestrateur-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrateur
  namespace: team6
spec:
  type: NodePort # Le type de service, ajustez selon vos besoins
  ports:
  - name: http
    port: 80 # Port que le service expose
    targetPort: 5001 # Port vers lequel le trafic est redirigé
    protocol: TCP
  selector:
    app: orchestrateur
