redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: team4
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis
