ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team6-ingress  
  namespace: team6  
spec:
  defaultBackend:
    service:
      name: watson-assistant-broker-svc
      port:
        number: 80
